2007-07-23  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Asttools
        * renamed ast_util into ast_accessor, new module ast_util will
          contain not so trivial functions

        * fix upstream-import script -- however don't import those little
          changes 

2007-07-09  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * some more small snapshot fixes that should have been commited
        before releasing

2007-06-17  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * updated documentation
        * fixed some todo's
        * some snapshot fixes
        * released snapshot elsa-9-491-282-1045-2476-olmar-2007-06-17

2007-05-21  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * copyright changes

2007-05-14  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * more snapshot fixes

        * snapshot creation fixes

        * fixed memcheck config default
        
        * added config support for memcheck
        * documentation updates
        * changes towards a new release

2007-05-02  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * regression tests ok
        * merge upstream, versions:
        elsa-stack: 9 smbase: 491 ast: 282 elkhound: 1045 elsa: 2476

        * remove new files from vendor import

2007-04-25  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * propagation of latest ml_ctype.ast changes

2007-04-24  Hendrik Tews  <tews@tandem.cs.ru.nl>

        * added to the interface of dense_set, superast

2007-04-20  Hendrik Tews  <tews@tandem.cs.ru.nl>

        Elsa, Ast
        * add TemplateInfo.getKind

        Ast
        * more dummies
        * added TemplateInfo and InheritedTemplateParams

2007-04-19  Hendrik Tews  <tews@tandem.cs.ru.nl>

        AST
        * added dummy record copies to force compile errors when the types
          in the ast change
        * exploit new type_id feature of memcheck in check_oast
        
        Elsa

        * added TemplateInfo and InheritedTemplateParams to ocaml