@@ -284,7 +284,8 @@ let ast_node_fun up down myindex = function
 	type_tags = s.type_tags; parent_scope = s.parent_scope;
 	scope_kind = s.scope_kind; namespace_var = s.namespace_var;
 	scope_template_params = s.scope_template_params; 
-	parameterized_entity = s.parameterized_entity
+	parameterized_entity = s.parameterized_entity;
+	scope_compound = s.scope_compound;
       }
       in
 	add_links up down myindex
@@ -299,7 +300,8 @@ let ast_node_fun up down myindex = function
 	   @ (opt_link scope_annotation s.parent_scope
 		(opt_link variable_annotation !(s.namespace_var) []))
 	   @ (List.map variable_annotation s.scope_template_params)
-	   @ (opt_link variable_annotation s.parameterized_entity []))
+	   @ (opt_link variable_annotation s.parameterized_entity
+		(opt_link compound_info_annotation !(s.scope_compound) [])))
 
 
   (* 27 *)
